# projeto-eng-dados

./: 404.html  README.md  delta_lake.ipynb  hello.ipynb  index.html  main.py  mkdocs.yml  pyproject.toml  spark-delta-lake.ipynb  spark-iceberg.ipynb
delta-lake/operations/: index.html
docs/: index.md
docs/delta-lake/: operations.md
docs/iceberg/: operations.md
iceberg/operations/: index.html
notebooks/: dataframe_api.ipynb  iceberg.ipynb  spark_sql.ipynb
search/: search_index.json
spark-warehouse/carro_delta/: .part-00000-63a3fdbe-249e-4d00-9c7f-a8765c2eb566-c000.snappy.parquet.crc  .part-00000-671a1df5-b269-4f95-a820-fe450336d7c5-c000.snappy.parquet.crc  .part-00000-984e3460-fca3-434e-9fc5-a7391e0ed909-c000.snappy.parquet.crc  .part-00000-ad532455-93e6-4753-a24c-360af871ca45-c000.snappy.parquet.crc  .part-00000-b7b3198e-7c99-4bb7-a0a4-e6be8e764d9d-c000.snappy.parquet.crc  .part-00000-cc9b76f9-a2b7-4e57-ba83-cebcd3758d18-c000.snappy.parquet.crc  .part-00000-df8c91e3-c442-4f93-a2a0-2a06d4824ac7-c000.snappy.parquet.crc  .part-00000-e18bad29-e4d1-49e2-b8db-04fd788a9aae-c000.snappy.parquet.crc  .part-00001-35019345-d0ca-438d-99ce-514fa0fed22c-c000.snappy.parquet.crc  .part-00001-61f4b9b1-f256-4a8a-b1cc-75be7573bed3-c000.snappy.parquet.crc  .part-00002-485ace8b-8726-430f-a919-162e742e922b-c000.snappy.parquet.crc  .part-00002-d195bddd-90dc-4599-83bc-52f2823d9fb6-c000.snappy.parquet.crc  part-00000-63a3fdbe-249e-4d00-9c7f-a8765c2eb566-c000.snappy.parquet  part-00000-671a1df5-b269-4f95-a820-fe450336d7c5-c000.snappy.parquet  (+10 more)
(+96 files in other folders)
