[project]
name = "projeto-eng-dados"
version = "0.1.0"
description = "Projeto com Apache Spark com Apache Iceberg e Delta Lake"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyspark==3.5.3",
    "seaborn>=0.13.2",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

